frontend/src/components/ResultPage/ResultPage.module.css
.titleRow {
  display: flex;
  justify-content: space-between;
}

.subtitle {
  font-size: 1rem;
  font-weight: 500;
}

.metadataRow {
  display: flex;
  justify-content: space-between;
}

.metadata {
  display: flex;
  gap: 1rem;
}

.authors {
  display: flex;
  flex-direction: column;
}

.iframe {
  width: 100%;
  height: 700px;
}

.linkContainer {
  display: flex;
}

.linkInput {
  flex: 1;
  height: 2rem;
  margin-right: 2rem;
  text-indent: 0.5rem;
  border-radius: 0.5rem;
  border: 1px solid #000;
  background-color: #fff;
}

.linkButton {
  border-radius: 2rem;
  background-color: #ded7f0;
  color: #44209e;
  font-weight: bold;
  border: none;
  padding: 0.5rem 1rem;
}

.resultPage {
  padding-bottom: 4rem;
}

.sectionRow {
  position: sticky;
  top: 5rem;
  margin: 2rem 0;
  display: flex;
  gap: 3rem;
  background-color: white;
}

.sectionRow button {
  background: none;
  border: none;
  font-size: 1.125rem;
  cursor: pointer;
  padding-bottom: 0.5rem;
  border-bottom: 3px solid transparent;
}

.sectionRow button:hover {
  color: #612ee2;
  font-weight: 700;
  border-bottom: 3px solid #612ee2;
}

.relatedMaterial {
  border-top: 1px solid #b6b6b6;
  margin: 5rem 0;
  padding: 2rem 0;
}

